opam-version: "2.0"
maintainer: "jeremie@dimino.org"
authors: ["Jérémie Dimino <jeremie@dimino.org>"]
homepage: "https://github.com/diml/mmap"
bug-reports: "https://github.com/diml/mmap/issues"
dev-repo: "git+https://github.com/diml/mmap.git"
license: "LGPL 2.1 with linking exception"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.02.3"}
  "dune" {build & >= "1.6"}
]
synopsis: "File mapping functionality"
description: """
This project provides a Mmap.map_file functions for mapping files in memory.
"""
